Changes towards version 0.3:
- keys.cfg from incompatible control scheme version is now renamed
  automatically to keys.old -Mika
- Added warranty message in the console on startup, SvdB
- Left and Right directions disabled in fuel screen (bug #452), from 
  Paxtez
- Syreen don't rejoice until victory truly is theirs (bug #451), from 
  Nic
- Guardian in Blazer mode being drained by DOGI will no longer
  result in a non-blazer Guardian with Blazer effects. Original sc2 bug.
  (bug #283); from Paxtez
- 'CREW' and 'BATT' instead of icons in combat screen when using
  PC-style menus (bug #308); from Paxtez
- New shipyard SCRAP system with scrapping confirmation
  (bug #413); from Paxtez
- Syreen ships become available when Talana says they are
  (bug #264); from Nic, Alex
- The infinity symbol is correctly printed for gas giant atmosphere
  in coarse scan screen (bug #239) -Alex
- Prevent Syreen crew above 12 getting thrown out the airlock in
  Roster screen (bug #184); from chmmravatar, Alex
- Lander report messages now use the entire panel (bug #36), from chmmravatar
- Fix colour cycling in the roster screen (bug #279), from Nic
- Fixed last seen battle-group teleporting to Sol after invoking
  Talking Pet in Sol (bug #109) -Alex
- Fixed a dialog glitch on Slylandro homeworld (#442) -Michael
- Freeze planetary simulation at beginning of landing sequence to stop
  event bursts (bug #80) -Michael
- Extra 2 ship slots in supermelee, as in the PC SC2, and all the PC
  default teams, from chmmravatar (bug #248)
  NOTE: this breaks old team saves!
- Made functions for GET_GAME_STATE and SET_GAME_STATE - SvdB
- Fixed bug with entering closing portals (bug #108) - SvdB+chmmravatar
- Mouse cursor is now hidden in fullscreen mode (bug #173) -Mika
- Version checks inside the input code to flag incompatible changes --Michael
- Install location for content on unix systems is now ${prefix}/share/uqm
  instead of ${prefix}/lib/uqm - SvdB